--- a/src/vscp/drivers/level1/peak/win32/peakdrv.vcxproj
+++ b/src/vscp/drivers/level1/peak/win32/peakdrv.vcxproj
@@ -134,7 +134,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <OutputFile>.\Debug\vscpl1_peakdrv.dll</OutputFile>
-      <ImportLibrary>.\Debug\peakdrv.lib</ImportLibrary>
+      <ImportLibrary>.\Debug\vscpl1_peakdrv.lib</ImportLibrary>
       <AdditionalLibraryDirectories>$(wxwin)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>comctl32.lib;wsock32.lib;netapi32.lib;rpcrt4.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>.\peakdrv.def</ModuleDefinitionFile>
@@ -242,7 +242,7 @@ if exist "$(VSCP_HOME)\src\vscp\Build\$(ConfigurationName)" copy /Y "$(OutDir)/$
       <LinkDLL>true</LinkDLL>
       <SubSystem>Console</SubSystem>
       <OutputFile>.\Release\vscpl1_peakdrv.dll</OutputFile>
-      <ImportLibrary>.\Release\peakdrv.lib</ImportLibrary>
+      <ImportLibrary>.\Release\vscpl1_peakdrv.lib</ImportLibrary>
       <AdditionalLibraryDirectories>$(wxwin)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>comctl32.lib;wsock32.lib;netapi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>.\peakdrv.def</ModuleDefinitionFile>
