--- a/src/vscp/drivers/level1/vector/win32/vectordrv.vcxproj
+++ b/src/vscp/drivers/level1/vector/win32/vectordrv.vcxproj
@@ -134,7 +134,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <OutputFile>.\Debug\vscpl1_vectordrv.dll</OutputFile>
-      <ImportLibrary>.\Debug\vectordrv.lib</ImportLibrary>
+      <ImportLibrary>.\Debug\vscpl1_vectordrv.lib</ImportLibrary>
       <AdditionalLibraryDirectories>$(VECTORDRV);$(wxwin)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;vcandm32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>.\vectordrv.def</ModuleDefinitionFile>
@@ -242,7 +242,7 @@ if exist "$(VSCP_HOME)\src\vscp\Build\$(ConfigurationName)" copy /Y "$(OutDir)/$
       <LinkDLL>true</LinkDLL>
       <SubSystem>Console</SubSystem>
       <OutputFile>.\Release\vscpl1_vectordrv.dll</OutputFile>
-      <ImportLibrary>.\Release\vectordrv.lib</ImportLibrary>
+      <ImportLibrary>.\Release\vscpl1_vectordrv.lib</ImportLibrary>
       <AdditionalLibraryDirectories>$(VECTORDRV);$(wxwin)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;vcandm32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>.\vectordrv.def</ModuleDefinitionFile>
