--- a/src/vscp/drivers/level1/zanthic/win32/zanthicdrv.vcxproj
+++ b/src/vscp/drivers/level1/zanthic/win32/zanthicdrv.vcxproj
@@ -126,7 +126,7 @@
       <LinkDLL>true</LinkDLL>
       <SubSystem>Console</SubSystem>
       <OutputFile>.\Release\vscpl1_zanthicdrv.dll</OutputFile>
-      <ImportLibrary>.\Release\zanthicdrv.lib</ImportLibrary>
+      <ImportLibrary>.\Release\vscpl1_zanthicdrv.lib</ImportLibrary>
       <AdditionalLibraryDirectories>$(wxwin)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>.\zanthicdrv.def</ModuleDefinitionFile>
@@ -235,7 +235,7 @@ if exist "$(VSCP_HOME)\src\vscp\Build\$(ConfigurationName)" copy /Y "$(OutDir)/$
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <OutputFile>.\Debug\vscpl1_zanthicdrv.dll</OutputFile>
-      <ImportLibrary>.\Debug\zanthicdrv.lib</ImportLibrary>
+      <ImportLibrary>.\Debug\vscpl1_zanthicdrv.lib</ImportLibrary>
       <AdditionalLibraryDirectories>$(wxwin)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>.\zanthicdrv.def</ModuleDefinitionFile>
