Wrong name for install

--- a/src/vscp/drivers/level1/socketcan/linux/Makefile.in
+++ b/src/vscp/drivers/level1/socketcan/linux/Makefile.in
@@ -44,7 +44,7 @@ PROJOBJS = ../../../../common/guid.o ../../../../../common/dllist.o
 all: vscpl1_socketcandrv.so test
 
 install: all
-	$(INSTALL_PROGRAM) socketcandrv.so $(libdir)
+	$(INSTALL_PROGRAM) vscpl1_socketcandrv.so $(libdir)
 
 uninstall: 
 
